* IMPORTANT: Renamed spawner's WaveNumber property to WaveSize
* Fixed orxFRAME child calculation when using anisotropic scale on parent
* Removed AutoDelete property for spawners
* Added orxObject_GetChild() / orxObject_GetSibling() for querying dependencies (for objects created through config's ChildList property only)
* Fixed config block value incorrectly saved by orxConfig_Save()
* Fixed tutorial #5 (viewport) jerkyness
* Sets default gravity to none in Box2D physics plugin
* Fixed use of AutoScroll/DepthScale with objects using bodies
* Changed tutorial #11 (spawner/shader) shader code
* Added orxDisplay_GetVideoModeCounter() / orxDisplay_GetVideoMode() / orxDisplay_SetVideoMode() & orxDisplay_IsVideoModeAvailable() (+SFML implementations)
* Renamed orxInput_GetBoundInputNumber() to orxInput_GetBoundInputCounter()
* Renamed orxStructure_GetNumber() to orxStructure_GetCounter()
* orxSystem module is now part of core (external library independent) and not a plugin anymore (+updated all configurations)
* When querying screen texture size, the latest display size will always be used
* Updated bounce demo to be able to change resolution on the fly (F1/F2) + ToggleFullScreen on F3
* Added __orxWII__ platform define for future work

orx 1.0 final
-----
* Added fully featured localization module (orxLocale)
* orxTEXT that relies on the orxLocale module will now be automatically updated when changing language at runtime
* Updated screenshot module to work with config reloads
* Optimized some access to the config module
* Added acceleration parameter to FX curves (to controle their frequencies over time)
* Fixed flipped & tiled objects rendering
* Replaced all external uses of orxRGBA by orxCOLOR
* Events handlers are now expected to return orxSTATUS_SUCCESS so as to continue calling other handlers
* Added orxDisplay_SetFullScreen() and orxDisplay_IsFullScreen() functions + SFML implementation
* Improved some tutorials + added localization example in tutorial #10