@@ -193,9 +193,9 @@ Color   = (150, 0, 150)
 FXList  = SpawnerFX
 
 [Spawner]
-Object      = Particle
+Object    = Particle
 WaveSize  = 1
-WaveDelay   = 0.075
+WaveDelay = 0.075
 
 [BounceViewport]
 ShaderList = BounceShader
