@@ -517,6 +517,8 @@
 : <a class="el" href="group__orx_structure.html#g796d7432fb8b158eac03b6d6aea5f6fa">orxStructure.h</a>
 <li>orxTEXTURE
 : <a class="el" href="group__orx_structure.html#ge682e499ff6fb12878575a10c1e8e59d">orxStructure.h</a>
+<li>orxTEXTURE_KZ_SCREEN_NAME
+: <a class="el" href="group__orx_texture.html#gaf12ea9274ab61238614c097cafb790d">orxTexture.h</a>
 <li>orxU2F
 : <a class="el" href="group__orx_math.html#ga71920a94ecdfe982b54d6e3e065308e">orxMath.h</a>
 <li>orxVIEWPORT
