@@ -1800,6 +1800,8 @@
 : <a class="el" href="group__orx_viewport.html#g93836499ffff1dd513c69b3b0e690cac">orxViewport.h</a>
 <li>orxViewport_GetRelativeSize()
 : <a class="el" href="group__orx_viewport.html#gfc6d9a5c61ebb87c8e8c41252a09fa97">orxViewport.h</a>
+<li>orxViewport_GetShaderPointer()
+: <a class="el" href="group__orx_viewport.html#gf2a59486f07d77ec447a0ad2ae9bb9c0">orxViewport.h</a>
 <li>orxViewport_GetSize()
 : <a class="el" href="group__orx_viewport.html#g3b6cbedca7b2e175e928bfe294b49960">orxViewport.h</a>
 <li>orxViewport_GetTexture()
