@@ -19,6 +19,9 @@
 <div class="contents">
 <h1>OrxTexture</h1><table border="0" cellpadding="0" cellspacing="0">
 <tr><td></td></tr>
+<tr><td colspan="2"><br><h2>Defines</h2></td></tr>
+<tr><td class="memItemLeft" nowrap align="right" valign="top">#define&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_texture.html#gaf12ea9274ab61238614c097cafb790d">orxTEXTURE_KZ_SCREEN_NAME</a>&nbsp;&nbsp;&nbsp;&quot;-=SCREEN=-&quot;</td></tr>
+
 <tr><td colspan="2"><br><h2>Typedefs</h2></td></tr>
 <tr><td class="memItemLeft" nowrap align="right" valign="top">typedef struct __orxTEXTURE_t&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_texture.html#gcdeb7b348fc4cb4910155013b459ea4a">orxTEXTURE</a></td></tr>
 
@@ -52,7 +55,23 @@ orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" hre
 
 </table>
 <hr><a name="_details"></a><h2>Detailed Description</h2>
-Texture module Module that handles textures <hr><h2>Typedef Documentation</h2>
+Texture module Module that handles textures <hr><h2>Define Documentation</h2>
+<a class="anchor" name="gaf12ea9274ab61238614c097cafb790d"></a><!-- doxytag: member="orxTexture.h::orxTEXTURE_KZ_SCREEN_NAME" ref="gaf12ea9274ab61238614c097cafb790d" args="" -->
+<div class="memitem">
+<div class="memproto">
+      <table class="memname">
+        <tr>
+          <td class="memname">#define orxTEXTURE_KZ_SCREEN_NAME&nbsp;&nbsp;&nbsp;&quot;-=SCREEN=-&quot;          </td>
+        </tr>
+      </table>
+</div>
+<div class="memdoc">
+
+<p>
+Defines 
+</div>
+</div><p>
+<hr><h2>Typedef Documentation</h2>
 <a class="anchor" name="gcdeb7b348fc4cb4910155013b459ea4a"></a><!-- doxytag: member="orxTexture.h::orxTEXTURE" ref="gcdeb7b348fc4cb4910155013b459ea4a" args="" -->
 <div class="memitem">
 <div class="memproto">
