@@ -22,6 +22,9 @@
 <code>#include &quot;<a class="el" href="orx_math_8h.html">math/orxMath.h</a>&quot;</code><br>
 <table border="0" cellpadding="0" cellspacing="0">
 <tr><td></td></tr>
+<tr><td colspan="2"><br><h2>Defines</h2></td></tr>
+<tr><td class="memItemLeft" nowrap align="right" valign="top">#define&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_texture.html#gaf12ea9274ab61238614c097cafb790d">orxTEXTURE_KZ_SCREEN_NAME</a>&nbsp;&nbsp;&nbsp;&quot;-=SCREEN=-&quot;</td></tr>
+
 <tr><td colspan="2"><br><h2>Typedefs</h2></td></tr>
 <tr><td class="memItemLeft" nowrap align="right" valign="top">typedef struct __orxTEXTURE_t&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_texture.html#gcdeb7b348fc4cb4910155013b459ea4a">orxTEXTURE</a></td></tr>
 
