@@ -20,6 +20,7 @@
 <h1>include/render/orxViewport.h File Reference</h1><code>#include &quot;<a class="el" href="orx_include_8h.html">orxInclude.h</a>&quot;</code><br>
 <code>#include &quot;<a class="el" href="orx_clock_8h.html">core/orxClock.h</a>&quot;</code><br>
 <code>#include &quot;<a class="el" href="orx_camera_8h.html">render/orxCamera.h</a>&quot;</code><br>
+<code>#include &quot;<a class="el" href="orx_shader_pointer_8h.html">render/orxShaderPointer.h</a>&quot;</code><br>
 <code>#include &quot;<a class="el" href="orx_texture_8h.html">display/orxTexture.h</a>&quot;</code><br>
 <table border="0" cellpadding="0" cellspacing="0">
 <tr><td></td></tr>
@@ -79,6 +80,9 @@
 <tr><td class="memItemLeft" nowrap align="right" valign="top">orxDLLAPI void orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_viewport.html#g48756d31aa83aa6bf136f6ccc970559d">orxViewport_EnableShader</a> (<a class="el" href="group__orx_viewport.html#g75b5cb6cbb6a2156cf382a50c65ee71a">orxVIEWPORT</a> *_pstViewport, orxBOOL _bEnable)</td></tr>
 
 <tr><td class="memItemLeft" nowrap align="right" valign="top">orxDLLAPI orxBOOL orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_viewport.html#g3bc8d8736d0e0e062fcbbbe8abdc086c">orxViewport_IsShaderEnabled</a> (const <a class="el" href="group__orx_viewport.html#g75b5cb6cbb6a2156cf382a50c65ee71a">orxVIEWPORT</a> *_pstViewport)</td></tr>
+
+<tr><td class="memItemLeft" nowrap align="right" valign="top">orxDLLAPI const <br>
+<a class="el" href="group__orx_shader_pointer.html#g6c38462d8ef60b304c0926770750c211">orxSHADERPOINTER</a> *orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_viewport.html#gf2a59486f07d77ec447a0ad2ae9bb9c0">orxViewport_GetShaderPointer</a> (const <a class="el" href="group__orx_viewport.html#g75b5cb6cbb6a2156cf382a50c65ee71a">orxVIEWPORT</a> *_pstViewport)</td></tr>
 
 <tr><td class="memItemLeft" nowrap align="right" valign="top">orxDLLAPI void orxFASTCALL&nbsp;</td><td class="memItemRight" valign="bottom"><a class="el" href="group__orx_viewport.html#g5512ae8be546ba73aa39b4031a9d1601">orxViewport_SetPosition</a> (<a class="el" href="group__orx_viewport.html#g75b5cb6cbb6a2156cf382a50c65ee71a">orxVIEWPORT</a> *_pstViewport, orxFLOAT _fX, orxFLOAT _fY)</td></tr>
 
