@@ -252,6 +252,6 @@ Code = "Your shader code block"
 ParamList = ParamFloat#ParamTexture#ParamVector#...; NB: Define all the parameters your shader code needs. Defined params then must have a default value to guess their type. If none is provided, type defaults to texture and will use shader's owner texture as value;
 ParamFloat = [Float];
 ParamVector = [Vector];
-ParamTexture = path/to/texture; NB: If an invalid path is given, or nothing is specified, the owner's texture will be used by default;
+ParamTexture = path/to/texture|screen; NB: If an invalid path is given, or nothing is specified, the owner's texture will be used by default. 'screen' will have orx use the screen's texture.
 UseCustomParam = true|false; NB: When set to true, an event will be sent to override params values at runtime. Defaults to false, ie. no override at runtime;
 KeepInCache = true|false; NB: If true, the shader will always stay in cache, even if no shader of this type is currently in use. Can save time but costs memory. Defaults to false;
