@@ -12,6 +12,8 @@ orx 1.1 rc0
 * Removed AutoDelete property for spawners
 * Added orxObject_GetChild() / orxObject_GetSibling() for querying dependencies (for objects created through config's ChildList property only)
 * Fixed config block value incorrectly saved by orxConfig_Save()
+* Added 'screen' keyword for ShaderList properties
+* Optimized shader lists processing when rendering objects & viewports
 * Fixed tutorial #5 (viewport) jerkyness
 * Sets default gravity to none in Box2D physics plugin
 * Fixed use of AutoScroll/DepthScale with objects using bodies
